# smartlabatwork-release

./: LICENSE  README.md  dynamixel_motor.patch
refbox_status_updater/: CMakeLists.txt  package.xml
refbox_status_updater/launch/: refbox_updater.launch
refbox_status_updater/scripts/: RefBoxStatusUpdater.py
rqt_youbot_dashboard/: CMakeLists.txt  package.xml  setup.py
rqt_youbot_dashboard/nodes/: broadcaster.py  laptop-status-broadcaster.py
rqt_youbot_dashboard/plugins/: plugin.xml
rqt_youbot_dashboard/scripts/: rqt_youbot_dashboard
rqt_youbot_dashboard/src/rqt_youbot_dashboard/: arm_status_widget.py  arm_tuck_widget.py  base_status_widget.py  battery_base_widget.py  cancel_goals_widget.py  clear_costmap_widget.py  cpu_widget.py  dashboard.py  drivers_status_widget.py  ethernet_widget.py  formlayout.py  location_widget.py  smach_widget.py  wifi_widget.py
slaw_actions/: CMakeLists.txt  package.xml
slaw_actions/action/: AlignLineDistance.action  GripOrPlace.action  OdomFineAdjust.action
slaw_arm_navigation/: CMakeLists.txt  package.xml
slaw_arm_navigation/cfg/: ArmConf.cfg
slaw_arm_navigation/config/: arm_ik_action.yaml  gripper_joint_trajectory_action.yaml
slaw_arm_navigation/launch/: joint_trajectory_action.launch  slaw_arm_navigation.launch
slaw_arm_navigation/nodes/: backplate_manager.py  gripper_trajectory_action.py  joint_trajectory_action.py  youbot_arm_reconf.py  youbot_gripper_action.py  youbot_simple_ik_action.py  youbot_tuck_arm_action.py
slaw_bmt/: CMakeLists.txt  package.xml
slaw_bmt/config/: plan.yaml
slaw_bmt/nodes/: bmt.py  slaw_bmt.py
slaw_bnt/: CMakeLists.txt  package.xml
slaw_bnt/config/: plan.yaml  plan_all.yaml
slaw_bnt/nodes/: bnt_smach.py
slaw_bringup/: CMakeLists.txt  package.xml
slaw_bringup/daemons/: bringup_base  bringup_base.sh  bringup_core.sh  ps3joy  roscore
slaw_bringup/description/: youbot.urdf.xacro
slaw_bringup/env_setup/: .bashrc  .emacs
slaw_bringup/env_setup/.emacs.d/: auto-complete-config.elc  auto-complete.elc  fuzzy.elc  popup.elc  yaml-mode.elc
slaw_bringup/env_setup/.ssh/: authorized_keys
slaw_bringup/launch/: bringup.launch  hokuyo.launch  openni2.launch  ps3.launch  startup_drivers.launch  youbot_driver.launch  youbot_joint_state_publisher.launch
slaw_bringup/nodes/: youbot_oodl_watchdog.py
slaw_bringup/scripts/: 45-lcd-battery.rules  47-hokuyo.rules  hokuyo.sh
slaw_btt/: CMakeLists.txt  package.xml
slaw_btt/config/: plan.yaml
slaw_btt/scripts/: btt.py
slaw_calibration/: CMakeLists.txt  package.xml
slaw_calibration/nodes/: calibrate_laser.py  drive_straight.py  turn.py
slaw_calibration/src/: ARCameraCalibrator.cpp
slaw_cbt/: CMakeLists.txt  package.xml
slaw_cbt/config/: plan.yaml
slaw_cbt/nodes/: cbt.py
slaw_diagnostics/: CMakeLists.txt  package.xml
slaw_diagnostics/include/: slaw_battery_monitor.h
slaw_diagnostics/launch/: diagnostics.launch
slaw_diagnostics/scripts/: sysinfo.py
slaw_diagnostics/src/: slaw_battery_monitor.cpp
slaw_dwa_local_planner/: CHANGELOG.rst  CMakeLists.txt  blp_plugin.xml  package.xml
slaw_gripper/: CHANGELOG.rst  CMakeLists.txt  package.xml
slaw_joystick/: CMakeLists.txt  package.xml
slaw_joystick/src/: youbot_joystick.cpp
slaw_location_service/: CMakeLists.txt  package.xml
slaw_location_service/data/: locations.p
slaw_location_service/scripts/: location_service.py
slaw_manipulation/: CMakeLists.txt  package.xml  setup.py
slaw_manipulation/arff/: depth.arff  rgb.arff  rgb_rv20.arff
slaw_manipulation/src/: cal.py  create_train_set.py  detect_holes_rgb.py  detect_objects_depth.py  detect_objects_rgb.py  detect_objects_vote.py  detect_rv20.py  holes_manager.py  j48.py  laser_helpers.py  object_classifier.py  object_manager.py  object_manager_test.py  parse_images.py  vision_constants.py  vision_helpers.py
slaw_msgs/: CMakeLists.txt  package.xml
slaw_msgs/msg/: BackplateObject.msg  JointDualState.msg  Location.msg  Object.msg  ObjectArray.msg  PoseStampedLabeled.msg  PoseStampedLabeledArray.msg  TargetArray.msg
slaw_navigation/: CMakeLists.txt  package.xml
slaw_navigation/cfg/: pid.cfg
slaw_navigation/config_common/: costmap_common_params.yaml  move_base_params.yaml  recovery_behaviors.yaml
slaw_navigation/launch/: amcl.launch  move_base_global.launch
slaw_navigation/maps/: german_open2014.pgm  map.pgm  map.pgm.magdeburg14  map.yaml  smartlab_20140321.pgm  smartlab_20140321.yaml
slaw_navigation/nodes/: OdomMovePidMonitor.py  OdomScanMovePidMonitor.py  align_line.py  fine_adjust.py  odom_move.py  odom_move_action.py  pid_pose.py
slaw_object_detection/: CMakeLists.txt  ExtrinsicCameraParams.cpp  default.xml  package.xml
slaw_object_detection/cfg/: cam_calbr_extrinsic.cfg  hough_circles.cfg  hough_line.cfg  slaw_camera_calibration.cfg  slaw_object_detection.cfg
slaw_object_detection/include/: object_detector.h
slaw_object_detection/include/CameraCalibration/: camera_calibration.h  camera_calibration_utils.h  extrinsic_camera_calibration.h  settings.h
slaw_object_detection/include/ObjectDetection/: hough_circles_detection.h  houghline_detection.h
slaw_object_detection/launch/: camera_calibration.launch  extrinsic.launch  extrinsic_calibration.launch  hough_circles.launch  hough_line.launch  object_detection_laptop.launch  usb_cam.launch
slaw_object_detection/src/: object_detector.cpp
slaw_object_detection/src/CameraCalibration/: camera_calibration.cpp  camera_calibration_utils.cpp  extrinsic_camera_calibration.cpp  extrinsic_camera_calibration.cpp.autosave  settings.cpp
slaw_object_detection/src/ObjectDetection/: hough_circles_detection.cpp  houghline_detection.cpp
slaw_pid/: CMakeLists.txt  package.xml  setup.py
slaw_pid/src/slaw_pid/: pid.py
slaw_ppt/: CMakeLists.txt  package.xml
slaw_ppt/config/: plan.yaml
slaw_ppt/launch/: pre_ppt.launch
slaw_ppt/nodes/: ppt.py  slaw_ppt.py
slaw_refbox/: CMakeLists.txt  package.xml
slaw_refbox/src/: refbox.py  refereeBoxClient.py  refereeBoxClientTest.py
slaw_registration/: CMakeLists.txt  package.xml
slaw_smach/: CMakeLists.txt  (+2 more)
(+74 files in other folders)
