<package>
    <name>refbox_status_updater</name>
    <version>1.0.0</version>
    <description>
    refbox_status_updater
    </description>
    <author>Jan Carstensen</author>
    <maintainer email="bogus@test.de">Jan Carstensen</maintainer>
    <license>BSD</license>
    <url type="website">http://ros.org/wiki/refbox_status_updater</url>
    <buildtool_depend>catkin</buildtool_depend>

    <!-- Dependencies needed to compile this package. -->
    <build_depend>rospy</build_depend>
    <build_depend>std_msgs</build_depend>

    <run_depend>rospy</run_depend>
    <run_depend>std_msgs</run_depend>

</package>


