<package>
  <name>slaw_bnt</name>
  <version>1.0.0</version>
  <description>bnt</description>
  <maintainer email="smartlab.liv@gmail.com">Daniel Hennes</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/bnt</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Daniel Hennes</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>rospy</build_depend>
  <build_depend>smach</build_depend>
  <build_depend>smach_ros</build_depend>
  <build_depend>move_base</build_depend>
  <build_depend>visualization_msgs</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>rospy</run_depend>
  <run_depend>smach</run_depend>
  <run_depend>smach_ros</run_depend>
  <run_depend>move_base</run_depend>
  <run_depend>visualization_msgs</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>rospy</test_depend> -->
  <!-- <test_depend>smach</test_depend> -->
  <!-- <test_depend>smach_ros</test_depend> -->
  <!-- <test_depend>move_base</test_depend> -->
  <!-- <test_depend>visualization_msgs</test_depend> -->

</package>