<package>
  <name>slaw_bringup</name>
  <version>1.0.0</version>
  <description>slaw_bringup</description>
  <maintainer email="smartlab.liv@gmail.com">Joscha Fossel</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/youbot_launch</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Joscha Fossel</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->

  <!-- Dependencies needed after this package is compiled. -->

  <!-- Dependencies needed only for running tests. -->

</package>