<package>
  <name>slaw_calibration</name>
  <version>1.0.0</version>
  <description>slaw_calibration</description>
  <maintainer email="smartlab.liv@gmail.com">youbot</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/slaw_calibration</url>
  <!-- <url type="bugtracker"></url> -->

  <author>youbot</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>rospy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
    
  <build_depend>sensor_msgs</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>rospy</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>

  <run_depend>sensor_msgs</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>rospy</test_depend> -->
  <!-- <test_depend>sensor_msgs</test_depend> -->

</package>