<package>
  <name>slaw_diagnostics</name>
  <version>1.0.0</version>
  <description>slaw_diagnostics</description>
  <maintainer email="smartlab.liv@gmail.com">Daan Bloembergen</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/slaw_diagnostics</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Daan Bloembergen</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>rospy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>slaw_msgs</build_depend>


  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>rospy</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>slaw_msgs</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>rospy</test_depend> -->
  <!-- <test_depend>roscpp</test_depend> -->
  <!-- <test_depend>diagnostic_msgs</test_depend> -->

</package>
