<package>
  <name>slaw_location_service</name>
  <version>1.0.0</version>
  <description>slaw_location_service</description>
  <maintainer email="smartlab.liv@gmail.com">Daan Bloembergen</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/slaw_location_service</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Daan Bloembergen</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>rospy</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>slaw_msgs</build_depend>
  <build_depend>slaw_srvs</build_depend>

  
  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>rospy</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>slaw_msgs</run_depend>
  <run_depend>slaw_srvs</run_depend>


  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>rospy</test_depend> -->
  <!-- <test_depend>std_srvs</test_depend> -->
  <!-- <test_depend>sensor_msgs</test_depend> -->
  <!-- <test_depend>geometry_msgs</test_depend> -->
  <!-- <test_depend>tf</test_depend> -->

</package>
