<package>
  <name>slaw_manipulation</name>
  <version>1.0.0</version>
  <description>slaw_manipulation</description>
  <maintainer email="smartlab.liv@gmail.com">Joscha Fossel</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/slaw_manipulation</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Joscha Fossel</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>brics_actuator</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>moveit_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>slaw_srvs</build_depend>
  <build_depend>slaw_msgs</build_depend>
  <build_depend>slaw_actions</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>trajectory_msgs</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>brics_actuator</run_depend>
  <run_depend>control_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>moveit_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>slaw_srvs</run_depend>
  <run_depend>slaw_msgs</run_depend>
  <run_depend>slaw_actions</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>trajectory_msgs</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>roscpp</test_depend> -->
  <!-- <test_depend>tf</test_depend> -->
  <!-- <test_depend>slaw_vision</test_depend> -->
  <!-- <test_depend>slaw_arm_navigation</test_depend> -->
  <!-- <test_depend>rospy</test_depend> -->
  <!-- <test_depend>actionlib</test_depend> -->
  <!-- <test_depend>actionlib_msgs</test_depend> -->
  <!-- <test_depend>trajectory_msgs</test_depend> -->
  <!-- <test_depend>control_msgs</test_depend> -->
  <!-- <test_depend>sensor_msgs</test_depend> -->
  <!-- <test_depend>kinematics_msgs</test_depend> -->
  <!-- <test_depend>slaw_vision</test_depend> -->
  <!-- <test_depend>geometry_msgs</test_depend> -->
  <!-- <test_depend>std_srvs</test_depend> -->
  <!-- <test_depend>arm_navigation_msgs</test_depend> -->
  <!-- <test_depend>brics_actuator</test_depend> -->

</package>
