<package>
  <name>slaw_navigation</name>
  <version>1.0.0</version>
  <description>slaw_navigation</description>
  <maintainer email="smartlab.liv@gmail.com">Daan Bloembergen</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/slaw_navigation</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Daan Bloembergen</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>rospy</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>slaw_actions</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>slaw_pid</build_depend>
  <build_depend>slaw_msgs</build_depend>
  <build_depend>slaw_srvs</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>rospy</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>slaw_actions</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>slaw_pid</run_depend>
  <run_depend>slaw_msgs</run_depend>
  <run_depend>slaw_srvs</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>rospy</test_depend> -->
  <!-- <test_depend>sensor_msgs</test_depend> -->
  <!-- <test_depend>geometry_msgs</test_depend> -->
  <!-- <test_depend>dynamic_reconfigure</test_depend> -->
  <!-- <test_depend>actionlib</test_depend> -->
  <!-- <test_depend>actionlib_msgs</test_depend> -->
  <!-- <test_depend>tf</test_depend> -->
  <!-- <test_depend>slaw_pid</test_depend> -->

</package>