<?xml version="1.0"?>
<package>
  <name>slaw_object_detection</name>
  <version>0.0.0</version>
  <description>Object detection on 2D camera</description>
  <maintainer email="broecker@todo.todo">broecker</maintainer>
  <license>TODO</license>
  <author >Bastian Broecker</author>

  <buildtool_depend>catkin</buildtool_depend>
  <!--<build_depend>OpenCV</build_depend>-->
  <build_depend>brics_actuator</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>slaw_actions</build_depend>
  <build_depend>slaw_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>slaw_srvs</build_depend>
  <build_depend>tf</build_depend>
  <!--  <run_depend>OpenCV</run_depend>-->
  <run_depend>brics_actuator</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>slaw_actions</run_depend>
  <run_depend>slaw_msgs</run_depend>
  <run_depend>slaw_srvs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
