<package>
  <name>slaw_refbox</name>
  <version>1.0.0</version>
  <description>slaw_refbox</description>
  <maintainer email="smartlab.liv@gmail.com">danielclaes</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/slaw_refbox</url>
  <!-- <url type="bugtracker"></url> -->

  <author>danielclaes</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->

  <!-- Dependencies needed after this package is compiled. -->

  <!-- Dependencies needed only for running tests. -->

</package>